S/390: Downcase first letter of error messages.
gcc/testsuite/ChangeLog:

2017-01-18  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>

	* gcc.target/s390/htm-builtins-compile-2.c (must_not_compile1):
	(must_not_compile2): Downcase first letter of error messages.
	* gcc.target/s390/target-attribute/tattr-13.c (b): Likewise.
	* gcc.target/s390/vector/vec-abi-vararg-2.c: Likewise.

gcc/ChangeLog:

2017-01-18  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>

	* config/s390/s390-c.c (s390_expand_overloaded_builtin): Downcase
	first letter of error messages.
	(s390_resolve_overloaded_builtin): Likewise.
	* config/s390/s390.c (s390_expand_builtin): Likewise.
	(s390_invalid_arg_for_unprototyped_fn): Likewise.
	(s390_valid_target_attribute_inner_p): Likewise.
	* config/s390/s390.md ("tabort"): Likewise.



git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244577 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,10 @@
+2017-01-18  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>
+
+	* gcc.target/s390/htm-builtins-compile-2.c (must_not_compile1):
+	(must_not_compile2): Downcase first letter of error messages.
+	* gcc.target/s390/target-attribute/tattr-13.c (b): Likewise.
+	* gcc.target/s390/vector/vec-abi-vararg-2.c: Likewise.
+
 2017-01-18  Nathan Sidwell  <nathan@acm.org>
 
 	PR c++/79091
