--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2017-01-18  Matthias Klose  <doko@ubuntu.com>
+
+       * doc/install.texi: Allow default for --with-target-bdw-gc-include.
+
 2016-01-18  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>
 
 	* config/rs6000/altivec.h (vec_bperm): Change #define.
