PR c++/77489 -- Reorganize abi warning check
	PR c++/77489
	* mangle.c (write_discriminator): Reorganize abi warning check.

git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244580 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-18  Markus Trippelsdorf  <markus@trippelsdorf.de>
+
+	PR c++/77489
+	* mangle.c (write_discriminator): Reorganize abi warning check.
+
 2017-01-18  Nathan Sidwell  <nathan@acm.org>
 
 	* cp-tree.h: Clarify exception spec node comment.
