PR lto/79061 gcc/
	* asan.c (get_translation_unit_decl): New function.
	(asan_add_global): Extract modules file name from globals
	TRANSLATION_UNIT_DECL in lto mode.
	* tree.c (build_translation_unit_decl): Add source location for newly
	built TRANSLATION_UNIT_DECL.

gcc/lto/

	* lto.c (lto_read_decls): accept location cache for
	TRANSLATION_UNIT_DECL.
	
gcc/testsuite/

	* gcc.dg/cpp/mi1.c: Adjust testcase.
	* gcc.dg/pch/cpp-3.c: Likewise.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244581 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-18  Maxim Ostapenko  <m.ostapenko@samsung.com>
+
+	PR lto/79061
+	* gcc.dg/cpp/mi1.c: Adjust testcase.
+	* gcc.dg/pch/cpp-3.c: Likewise.
+
 2016-01-18  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>
 
 	* gcc.target/powerpc/p8vector-builtin-8.c: Add new form for
