PR c++/78488 	* call.c (build_over_call): When checking ellipsis conversions for 	an inherited ctor, make sure there is at least one conversion.
	* g++.dg/cpp1z/inh-ctor37.C: New.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244592 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-18  Nathan Sidwell  <nathan@acm.org>
+
+	PR c++/78488
+	* call.c (build_over_call): When checking ellipsis conversions for
+	an inherited ctor, make sure there is at least one conversion.
+
 2017-01-18  Jason Merrill  <jason@redhat.com>
 
 	PR c++/78894 - ICE with class deduction and default arg
