--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,27 @@
+2017-01-18  Michael Meissner  <meissner@linux.vnet.ibm.com>
+
+	* config/rs6000/rs6000-c.c (altivec_overloaded_builtins): Add
+	__builtin_vec_revb builtins.
+	* config/rs6000/rs6000-builtins.def (P9V_BUILTIN_XXBRQ_V16QI): Add
+	built-in functions to support generation of the ISA 3.0 XXBR<x>
+	vector byte reverse instructions.
+	(P9V_BUILTIN_XXBRQ_V1TI): Likewise.
+	(P9V_BUILTIN_XXBRD_V2DI): Likewise.
+	(P9V_BUILTIN_XXBRD_V2DF): Likewise.
+	(P9V_BUILTIN_XXBGW_V4SI): Likewise.
+	(P9V_BUILTIN_XXBGW_V4SF): Likewise.
+	(P9V_BUILTIN_XXBGH_V8HI): Likewise.
+	(P9V_BUILTIN_VEC_REVB): Likewise.
+	* config/rs6000/vsx.md (p9_xxbrq_v1ti): New insns/expanders to
+	generate the ISA 3.0 XXBR<x> vector byte reverse instructions.
+	(p9_xxbrq_v16qi): Likewise.
+	(p9_xxbrd_<mode>, VSX_D iterator): Likewise.
+	(p9_xxbrw_<mode>, VSX_W iterator): Likewise.
+	(p9_xxbrh_v8hi): Likewise.
+	* config/rs6000/altivec.h (vec_revb): Define if ISA 3.0.
+	* doc/extend.texi (RS/6000 Altivec Built-ins): Document the
+	vec_revb built-in functions.
+
 2017-01-18  Uros Bizjak  <ubizjak@gmail.com>
 
 	PR rtl-optimization/78952
