PR lto/78407 	* symtab.c (symtab_node::equal_address_to): Fix comparing of 	interposable aliases.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244612 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-17  Jan Hubicka  <hubicka@ucw.cz>
+
+	PR lto/78407
+	* symtab.c (symtab_node::equal_address_to): Fix comparing of
+	interposable aliases.
+
 2017-01-18  Peter Bergner  <bergner@vnet.ibm.com>
 
 	PR target/78516
